Changed theme from Warsaw to metropolis

--- a/git/cours-git.tex
+++ b/git/cours-git.tex
@@ -5,7 +5,7 @@
 \documentclass{beamer}
 
 \mode<presentation> {
-  \usetheme{Warsaw}	% use metropolis
+  \usetheme{metropolis}	% use metropolis
   %\setbeamercovered{transparent}	% donne un aperçu des élement cachés en transparence
 }
 
